--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: install surge
-      run: npm install -g surge
+      run: npm install --global surge
     
     - name: run surge
-      run: surge ./ http://camp20.surge.sh/ --token {{ Secrets.my_token }}
+      run: surge ./ http://camp20.surge.sh --token ${{ Secrets.MY_TOKEN }}
        
         echo Add other actions to build,
         echo test, and deploy your project.
